--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-test-renderer": "^16.6.0",
+    "yarn": "^1.10.1"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
